Minor changes. - Changed spinner to bootstrap component. - Used object .id instead of email for userAccount. - Minor formatting.

--- a/login.html
+++ b/login.html
@@ -39,20 +39,8 @@
                 </div>
                 <button type="submit" class="btn btn-primary" id="loginSubmit">Log in</button>
                 <p class="mt-2">Don't have an account? <a href="register.html" class="link-info">Register here</a></p>
-                <div id="spinner" class="loadingio-spinner-spinner-2bx6ng5j2dc" style="display: none;">
-                    <div class="ldio-9tisb9ooc7p">
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                    </div>
+                <div id="spinner" class="spinner-border" role="status" style="display: none;">
+                    <span class="visually-hidden">Loading...</span>
                 </div>
                 <span id="errorMessage"></span>
             </form>
