--- a/register.html
+++ b/register.html
@@ -52,20 +52,8 @@
                 </div>
                 <button type="submit" class="btn btn-primary" id="registerSubmit">Register</button>
                 <p class="mt-2">Already have an account? <a href="login.html" class="link-info">Log in here.</a></p>
-                <div id="spinner" class="loadingio-spinner-spinner-2bx6ng5j2dc" style="display: none;">
-                    <div class="ldio-9tisb9ooc7p">
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                    </div>
+                <div id="spinner" class="spinner-border" role="status" style="display: none;">
+                    <span class="visually-hidden">Loading...</span>
                 </div>
                 <span id="errorMessage"></span>
             </form>
