--- a/rewards.html
+++ b/rewards.html
@@ -57,25 +57,13 @@
     <div class="container py-5">
         <h2 class="text-center"><strong>LEADERBOARD</strong></h2>
         <div class="row justify-content-center">
-            <div id="spinner" class="loadingio-spinner-spinner-2bx6ng5j2dc col-1">
-                <div class="ldio-9tisb9ooc7p">
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                </div>
+            <div id="spinner" class="spinner-border" role="status">
+                <span class="visually-hidden">Loading...</span>
             </div>
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8">
-                <table class="table" id="leaderboard">
+                <table class="table" id="leaderboard" style="display: none;">
                     <thead>
                     <th>Name</th>
                     <th>Score</th>
