Finished index.html

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="container h-100">
           <div class="d-flex h-100 text-center align-items-center">
             <div class="w-100 text-white">
-              <h1 class="display-3">COMZONE</h1>
+              <h2 class="display-3">COMZONE</h2>
               <p class="lead mb-0">Singapore's #1 Customisable High Performance PC Builders.</p>
             </div>
           </div>
@@ -75,7 +75,7 @@
 
     <!-- CATEGORY SECTION: START -->
     <div class="bg-dark text-white p-5">
-        <h1 class="pt-4 text-center">What are you looking for today?</h1>
+        <h2 class="pt-4 text-center">What are you looking for today?</h2>
         <div class="container my-5">
             <div class="row">
                 <a class="col-sm ms-4 me-4 text-decoration-none text-white" href="explore.html#desktops">
@@ -103,7 +103,7 @@
     <!-- CATEGORY SECTION: END -->
 
     <!-- WHY US SECTION: START -->
-    <h1 class="mt-5 text-center">Our Promise - Why COMZONE?</h1>
+    <h2 class="mt-5 text-center">Our Promise - Why COMZONE?</h2>
     <div class="container my-5">
         <div class="row">
           <div class="col-sm ms-4 me-4">
@@ -139,7 +139,7 @@
 
     <!-- VIDEO PLAYER SECTION: START -->
     <div class="bg-dark text-white">
-        <h1 class="mt-5 pt-5 text-center">What Happens After Checking Out At COMZONE?</h1>
+        <h2 class="mt-5 pt-5 text-center">What Happens After Checking Out At COMZONE?</h2>
         <h5 class="text-center text-secondary m-4">Ordered &#187; Built &#187; Tested &#187; Packed &#187; Ready To Ship</h5>
         <div class="embed-responsive embed-responsive-16by9 pb-4">
             <iframe class="mx-auto d-block mb-5" width="560" height="315" src="https://www.youtube.com/embed/Va18zfmeaD4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -150,7 +150,7 @@
 
     <!-- ENDORSEMENT: START -->
     <div class="container my-5">
-        <h1 class="text-center">We're Built For The Best</h1>
+        <h2 class="text-center">We're Built For The Best</h2>
         <div class="pro-img-block mx-auto d-block mt-3">
             <img src="assets/img/index/pro-endorsement-shuqri-xiao.jpg" alt="">
         </div>
@@ -168,35 +168,44 @@
     </div>
     <!-- ENDORSEMENT: END -->
 
-
     <!-- TESTIMONIAL: START -->
-    <section class="testimonial text-center">
+    <div class="testimonial text-center bg-dark mt-4">
         <div class="container">
-
-            <div class="heading white-heading">
-                Testimonial
-            </div>
+            <h2 class="text-center text-white mt-5">Our Customers Love Us</h2>
+            <img height="25px" style="filter: invert(100%);" class="mb-3" src="assets/img/index/5-star-rating.png">
             <div id="testimonial4" class="carousel slide testimonial4_indicators testimonial4_control_button thumb_scroll_x swipe_x" data-ride="carousel" data-pause="hover" data-interval="5000" data-duration="2000">
              
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
                         <div class="testimonial4_slide">
-                            <img src="https://i.ibb.co/8x9xK4H/team.jpg" class="img-circle img-responsive" />
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
-                            <h4>Client 1</h4>
+                            <img src="https://i.ibb.co/8x9xK4H/team.jpg" class="img-circle img-responsive"/>
+                            <p>
+                                My girlfriend and I were on the verge of break up because my old PC was too noisy. 
+                                Not anymore! Consider this relationship saved. 
+                                The PC is so silent that she would sometimes forget I'm even home and invite her lover over. He's a pretty cool guy.
+                            </p>
+                            <h4>- Tom (CEO, Prohub)</h4>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="testimonial4_slide">
-                            <img src="https://i.ibb.co/8x9xK4H/team.jpg" class="img-circle img-responsive" /><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
-                            <h4>Client 2</h4>
+                            <img src="assets/img/index/testimonial-jennifer.jpg" class="img-circle img-responsive" style="object-fit: cover;"/>
+                            <p>
+                                This is the best PC company I've ever worked with! 
+                                Friendly customer service, fast delivery and most importantly, monster PCs at affordable prices! 
+                                I will definitely come back for more (hopefully 10 years later because I hope my new PC lasts that long).
+                            </p>
+                            <h4>- Jennifer (COO, BestCompany)</h4>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="testimonial4_slide">
-                            <img src="https://i.ibb.co/8x9xK4H/team.jpg" class="img-circle img-responsive" />
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
-                            <h4>Client 3</h4>
+                            <img src="assets/img/index/testimonial-conan.jpg" class="img-circle img-responsive" style="object-fit: cover;"/>
+                            <p>
+                                If you're still looking for an efficient PC that's able to suit all your needs, from gaming to video editing to animation, 
+                                look no further! Check out COMZONE, the customer rated number 1 custom PC brand in Southeast Asia!
+                            </p>
+                            <h4>- Conan (CFO, GeMA)</h4>
                         </div>
                     </div>
                 </div>
@@ -210,9 +219,70 @@
                 </button>
             </div>
         </div>
-    </section>
+    </div>
     <!-- TESTIMONIAL: END -->
 
+    <!-- MAILING LIST: START -->
+    <div class="d-block mx-auto">
+        <h2 class="text-center mt-5">Stay Tuned</h2>
+        <p class="text-center">Subscribe to our newsletter to never miss our latest updates, product discounts and more!</p>
+        <div class="mb-5 mailing-list-input d-block mx-auto">
+            <div class="input-group"> 
+                <input type="email" class="form-control" placeholder="Enter email to subscribe"> 
+                <span class="input-group-btn"> 
+                    <button class="mailing-btn" type="submit">Subscribe Now</button> 
+                </div>
+        </div>
+    </div>
+    <!-- MAILING LIST: END -->
+
+    <!-- CONTACT FORM: START -->
+	<div class="contact-us d-block mx-auto mb-5">
+        <div class="contact-us-container text-white">
+          <div class="screen">
+            <div class="screen-header">
+              <div class="screen-header-left">
+                <div class="screen-header-button close"></div>
+                <div class="screen-header-button maximize"></div>
+                <div class="screen-header-button minimize"></div>
+              </div>
+              <div class="screen-header-right">
+                <div class="screen-header-ellipsis"></div>
+                <div class="screen-header-ellipsis"></div>
+                <div class="screen-header-ellipsis"></div>
+              </div>
+            </div>
+            <h2 class="text-center mt-3">Contact Us</h2>
+            <p class="text-center">We respond within 3 business days.</p>
+            <div class="screen-body">
+              <div class="screen-body-item left pt-2">
+                <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_fn2gqs3b.json"  background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay></lottie-player>
+              </div>
+              <div class="screen-body-item pt-2">
+                <div class="app-form">
+                  <div class="app-form-group">
+                    <input class="app-form-control" placeholder="NAME" type="text">
+                  </div>
+                  <div class="app-form-group">
+                    <input class="app-form-control" placeholder="EMAIL" type="email">
+                  </div>
+                  <div class="app-form-group">
+                    <input class="app-form-control" placeholder="CONTACT NO" type="number">
+                  </div>
+                  <div class="app-form-group message">
+                    <input class="app-form-control" placeholder="MESSAGE" type="text">
+                  </div>
+                  <div class="app-form-group buttons">
+                    <button class="app-form-button">CANCEL</button>
+                    <button class="app-form-button">SEND</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    <!-- CONTACT FORM: END -->
 
     <!-- FOOTER: START -->
     <footer class="bg-dark text-white pt-5 pb-4 mt-auto">
@@ -288,5 +358,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </body>
 </html>
