--- a/index.html
+++ b/index.html
@@ -231,7 +231,8 @@
                 <input type="email" class="form-control" placeholder="Enter email to subscribe"> 
                 <span class="input-group-btn"> 
                     <button class="mailing-btn" type="submit">Subscribe Now</button> 
-                </div>
+                </span>
+            </div>
         </div>
     </div>
     <!-- MAILING LIST: END -->
@@ -239,50 +240,72 @@
     <!-- CONTACT FORM: START -->
 	<div class="contact-us d-block mx-auto mb-5">
         <div class="contact-us-container text-white">
-          <div class="screen">
-            <div class="screen-header">
-              <div class="screen-header-left">
-                <div class="screen-header-button close"></div>
-                <div class="screen-header-button maximize"></div>
-                <div class="screen-header-button minimize"></div>
-              </div>
-              <div class="screen-header-right">
-                <div class="screen-header-ellipsis"></div>
-                <div class="screen-header-ellipsis"></div>
-                <div class="screen-header-ellipsis"></div>
-              </div>
-            </div>
-            <h2 class="text-center mt-3">Contact Us</h2>
-            <p class="text-center">We respond within 3 business days.</p>
-            <div class="screen-body">
-              <div class="screen-body-item left pt-2">
-                <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_fn2gqs3b.json"  background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay></lottie-player>
-              </div>
-              <div class="screen-body-item pt-2">
-                <div class="app-form">
-                  <div class="app-form-group">
-                    <input class="app-form-control" placeholder="NAME" type="text">
-                  </div>
-                  <div class="app-form-group">
-                    <input class="app-form-control" placeholder="EMAIL" type="email">
-                  </div>
-                  <div class="app-form-group">
-                    <input class="app-form-control" placeholder="CONTACT NO" type="number">
-                  </div>
-                  <div class="app-form-group message">
-                    <input class="app-form-control" placeholder="MESSAGE" type="text">
-                  </div>
-                  <div class="app-form-group buttons">
-                    <button class="app-form-button">CANCEL</button>
-                    <button class="app-form-button">SEND</button>
-                  </div>
+            <div class="screen">
+                <div class="screen-header">
+                    <div class="screen-header-left">
+                        <div class="screen-header-button close"></div>
+                        <div class="screen-header-button maximize"></div>
+                        <div class="screen-header-button minimize"></div>
+                    </div>
+                    <div class="screen-header-right">
+                        <div class="screen-header-ellipsis"></div>
+                        <div class="screen-header-ellipsis"></div>
+                        <div class="screen-header-ellipsis"></div>
+                    </div>
                 </div>
-              </div>
+                <h2 class="text-center mt-3">Contact Us</h2>
+                <p class="text-center">We respond within 3 business days.</p>
+                <div class="screen-body">
+                    <div class="screen-body-item left pt-2">
+                        <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_fn2gqs3b.json"  background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay></lottie-player>
+                    </div>
+                    <div class="screen-body-item pt-2">
+                        <form id="contact-form">
+                            <div class="app-form">
+                                <div class="app-form-group">
+                                    <input id="contact--name" class="app-form-control" placeholder="NAME" type="text">
+                                </div>
+                                <div class="app-form-group">
+                                    <input id="contact--email" class="app-form-control" placeholder="EMAIL" type="email">
+                                </div>
+                                <div class="app-form-group">
+                                    <input id="contact--contactNo" class="app-form-control" placeholder="CONTACT NO" type="number">
+                                </div>
+                                <div class="app-form-group message">
+                                    <input id="contact--message" class="app-form-control" placeholder="MESSAGE" type="text">
+                                </div>
+                                <div class="app-form-group buttons">
+                                    <button id="contact--cancel" class="app-form-button" type="reset">CANCEL</button>
+                                    <button id="contact--send" class="app-form-button" type="submit">SEND</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
+    </div>
     <!-- CONTACT FORM: END -->
+
+
+    <!-- MODAL: START -->
+    <div class="modal fade" id="defaultModal" tabindex="-1" aria-labelledby="defaultModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="defaultModalLabel"></h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body"></div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--MODAL: END -->
+
 
     <!-- FOOTER: START -->
     <footer class="bg-dark text-white pt-5 pb-4 mt-auto">
@@ -356,8 +379,9 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/script.js"></script>
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <script src="js/contact.js"></script>
 </body>
 </html>
