--- a/explore.html
+++ b/explore.html
@@ -43,6 +43,8 @@
                 </div>
             </nav>
         </div>
+        <div class="border-bottom"></div>
+
         <!-- NAVIGATION BAR: END -->
 
 
