--- a/account.html
+++ b/account.html
@@ -46,6 +46,7 @@
             </div>
         </nav>
     </div>
+    <div class="border-bottom"></div>
     <!-- NAVIGATION BAR: END -->
 
     <div class="container my-5">
