Finished Customization page.

--- a/explore.html
+++ b/explore.html
@@ -43,11 +43,12 @@
                 </div>
             </nav>
         </div>
+        <div class="border-bottom"></div>
         <!-- NAVIGATION BAR: END -->
 
 
         <!-- PRODUCT FILTER: START -->
-        <h1 class="text-center mt-4">What are you looking for today?</h1>
+        <h1 class="text-center mt-5">What are you looking for today?</h1>
         <nav class="navbar navbar-expand navbar-light d-flex justify-content-center">
             <div class="navbar-nav text-center">
                 <a class="nav-item nav-link" href="#desktops"><h5>Desktops</h5></a>
@@ -85,7 +86,7 @@
                                 - GIGABYTE B560M DS3H <br>
                                 - ZOTAC GTX 1650 OC 4GB <br>
                                 - Premium Enthusiast Grade Thermal Compound <br>
-                                - 8GB KLEVV Performance 3200 Mhz (8 x 1) <br>
+                                - 8GB KLEVV Performance 3200 MHz (8 x 1) <br>
                                 - Intel / AMD stock cooling fan <br>
                                 - 512GB Samsung NVME M.2 SSD (R 3500 | W 2900) <br>
                                 - COMZONE S1 ARGB Fans x 4 <br>
@@ -99,7 +100,7 @@
                                 <h4 class="ps-2 text-primary"><strong>$1225</emphasis></strong></h4>
                             </div>
                             <a href="#" class="btn btn-primary">Add to Cart</a>
-                            <a href="#" class="btn btn-secondary">Customise</a>
+                            <a href="configuration/rapid.html" class="btn btn-secondary">Customise</a>
                         </div>
                     </div>
                     <!-- ZEAL SYSTEM -->
@@ -115,7 +116,7 @@
                                 - GIGABYTE B560 HD3 <br>
                                 - ZOTAC GTX 1650 OC 4GB <br>
                                 - Premium Enthusiast Grade Thermal Compound <br>
-                                - 8GB KLEVV Performance 3200 Mhz (8 x 1) <br>
+                                - 8GB KLEVV Performance 3200 MHz (8 x 1) <br>
                                 - Intel / AMD stock cooling fan <br>
                                 - 512GB Samsung NVME M.2 SSD (R 3500 | W 2900) <br>
                                 - Standard Chassis Fans <br>
@@ -146,7 +147,7 @@
                                 - GIGABYTE B560 HD3 <br>
                                 - ZOTAC GTX 1650 OC 4GB <br>
                                 - Premium Enthusiast Grade Thermal Compound <br>
-                                - 8GB KLEVV Performance 3200 Mhz (8 x 1) <br>
+                                - 8GB KLEVV Performance 3200 MHz (8 x 1) <br>
                                 - Intel / AMD stock cooling fan <br>
                                 - 512GB Samsung NVME M.2 SSD (R 3500 | W 2900) <br>
                                 - NZXT Advanced RGB Case Lights <br>
@@ -175,7 +176,7 @@
                                 - GIGABYTE B560 HD3 <br>
                                 - ZOTAC GTX 1650 OC 4GB <br>
                                 - Premium Enthusiast Grade Thermal Compound <br>
-                                - 8GB KLEVV Performance 3200 Mhz (8 x 1) <br>
+                                - 8GB KLEVV Performance 3200 MHz (8 x 1) <br>
                                 - Intel / AMD stock cooling fan <br>
                                 - 512GB Samsung GEN4 Ultrafast SSD (R 6900 | W 5000) <br>
                                 - Standard RGB Case Lights <br> 
@@ -215,7 +216,7 @@
                                 - Intel® Core™ i5-12500H Processor (12 Cores) <br>
                                 - NVIDIA GEFORCE RTX 3050 4GB <br>
                                 - 15.6" FHD 144Hz Wide View Angle Display (1920 x 1080) <br>
-                                - 8GB DDR4 3200 Mhz (8 x 1) <br>
+                                - 8GB DDR4 3200 MHz (8 x 1) <br>
                                 - Premium Enthusiast Grade Thermal Compound <br>
                                 - RGB Tactile Hybrid Silent Keyboard with 15 Color Options (Single Zone) <br>
                                 - 512GB Samsung PM991 NVME SSD <br>
@@ -244,7 +245,7 @@
                                 - AMD RYZEN 7 5800H Processor (8 Cores) <br>
                                 - NVIDIA GEFORCE RTX 3060 6GB GDDR6 <br>
                                 - 16.0" 165Hz Wide Color Gamut Display (2560 x 1440) <br>
-                                - 8GB DDR4 3200 Mhz (8 x 1) <br>
+                                - 8GB DDR4 3200 MHz (8 x 1) <br>
                                 - Premium Enthusiast Grade Thermal Compound <br>
                                 - 512GB Samsung PM991 NVME SSD <br>
                                 - INTEL AX201 + Bluetooth (Wi-Fi 6) <br>
@@ -272,7 +273,7 @@
                                 - Intel® Core™ i7-11800H Processor (8 Cores) <br>
                                 - NVIDIA GEFORCE RTX 3060 6GB GDDR6 <br>
                                 - 15.6" 165Hz QHD Premium Wide Color Display (2560 x 1440) <br>
-                                - 8GB DDR4 3200 Mhz (8 x 1) <br>
+                                - 8GB DDR4 3200 MHz (8 x 1) <br>
                                 - Premium Enthusiast Grade Thermal Compound <br>
                                 - 512GB Samsung PM991 NVME SSD <br>
                                 - INTEL AX201 + Bluetooth (Wi-Fi 6) <br>
@@ -299,7 +300,7 @@
                                 - Intel® Core™ i7-11370H Processor (4 Cores 8 Threads) <br>
                                 - INTEL® IRIS® XE GRAPHICS <br>
                                 - 14.0" 90Hz WQXGA 100% SRGB Display (2560 x 1600) <br>
-                                - 8GB DDR4 3200 Mhz (8 x 1) <br>
+                                - 8GB DDR4 3200 MHz (8 x 1) <br>
                                 - Premium Enthusiast Grade Thermal Compound <br>
                                 - 512GB Samsung PM991 NVME SSD <br>
                                 - INTEL AX201 + Bluetooth (Wi-Fi 6) <br>
