--- a/rewards.html
+++ b/rewards.html
@@ -50,8 +50,38 @@
             </div>
         </nav>
     </div>
+    <div class="border-bottom"></div>
     <!-- NAVIGATION BAR: END -->
 
+    <!-- LOYALTY PROGRAM: START -->
+    <h1 class="text-center mt-5">Meet Poop - The Way We Reward You For Spending</h1>
+
+    <!-- HOW IT WORKS SECTION: START -->
+    <div class="container my-5">
+        <div class="col">
+          <div class="row-sm ms-4 me-4">
+            <div class="container my-5">
+                <div class="row">
+                  <div class="col-sm-2 ms-4 me-4">
+                    <p class="rewards-steps-icon">1</p>
+                  </div>
+                  <div class="col-sm-8 ms-4 me-4">
+                    <h5 class="text-left text-uppercase"><strong>Performance Optimised</strong></h5>
+                    <p class="text-left">
+                        COMZONE PC selects and uses only the finest components. 
+                        We fine tune systems to get the ideal performance in the most demanding scenarios, and you know what you are getting 
+                        when you build a boutique system with us.
+                    </p>
+                  </div>
+                </div>
+            </div>
+            </div>
+          </div>
+        </div>
+    </div>
+    <!-- HOW IT WORKS SECTION: END -->
+
+    <!-- LOYALTY PROGRAM: END -->
 
     <!-- LEADERBOARD: START-->
     <div class="container py-5">
@@ -65,6 +95,7 @@
             <div class="col-lg-8">
                 <table class="table" id="leaderboard" style="display: none;">
                     <thead>
+                    <th>Rank</th>
                     <th>Name</th>
                     <th>Score</th>
                     </thead>
