Minor changes. - Made paragraph in middle in rewards page. - Minor formatting in script.js

--- a/rewards.html
+++ b/rewards.html
@@ -59,24 +59,23 @@
     <!-- HOW IT WORKS SECTION: START -->
     <div class="container my-5">
         <div class="col">
-          <div class="row-sm ms-4 me-4">
-            <div class="container my-5">
-                <div class="row">
-                  <div class="col-sm-2 ms-4 me-4">
-                    <p class="rewards-steps-icon">1</p>
-                  </div>
-                  <div class="col-sm-8 ms-4 me-4">
-                    <h5 class="text-left text-uppercase"><strong>Performance Optimised</strong></h5>
-                    <p class="text-left">
-                        COMZONE PC selects and uses only the finest components. 
-                        We fine tune systems to get the ideal performance in the most demanding scenarios, and you know what you are getting 
-                        when you build a boutique system with us.
-                    </p>
-                  </div>
+            <div class="row-sm ms-4 me-4">
+                <div class="container my-5">
+                    <div class="row">
+                        <div class="col-sm-2 ms-4 me-4">
+                            <p class="rewards-steps-icon">1</p>
+                        </div>
+                        <div class="col-sm-8 ms-4 me-4 my-auto">
+                            <h5 class="text-left text-uppercase"><strong>Performance Optimised</strong></h5>
+                            <p class="text-left">
+                                COMZONE PC selects and uses only the finest components.
+                                We fine tune systems to get the ideal performance in the most demanding scenarios, and you know what you are getting
+                                when you build a boutique system with us.
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
-            </div>
-          </div>
         </div>
     </div>
     <!-- HOW IT WORKS SECTION: END -->
