--- a/rewards.html
+++ b/rewards.html
@@ -65,7 +65,7 @@
                   <div class="col-sm-2 ms-4 me-4">
                     <p class="rewards-steps-icon">1</p>
                   </div>
-                  <div class="col-sm-8 ms-4 me-4">
+                  <div class="col-sm-8 ms-4 me-4 rewards-steps-details">
                     <h5 class="text-left text-uppercase"><strong>Performance Optimised</strong></h5>
                     <p class="text-left">
                         COMZONE PC selects and uses only the finest components. 
