--- a/rewards.html
+++ b/rewards.html
@@ -70,7 +70,7 @@
                             <p class="text-left">
                                 COMZONE PC selects and uses only the finest components.
                                 We fine tune systems to get the ideal performance in the most demanding scenarios, and you know what you are getting
-                                when you build a boutique system with us.
+                                when you build a boutique system with us. ABC
                             </p>
                         </div>
                     </div>
