--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
                 <ul class="navbar-nav ms-auto text-md-center">
                     <li><a href="explore.html" class="nav-link">Shop</a></li>
                     <li><a href="rewards.html" class="nav-link">Rewards</a></li>
-                    <li><a href="#" class="nav-link">About</a></li>
-                    <li><a href="#" class="nav-link">Support</a></li>
+                    <li><a href="support.html" class="nav-link">Support</a></li>
                     <li id="account-button" class="nav-link"><img src="assets/img/index/user-interface.png" alt="" style="height: 20px;"></li>
                 </ul>
             </div>
