--- a/rewards.html
+++ b/rewards.html
@@ -43,7 +43,6 @@
                 <ul class="navbar-nav ms-auto text-md-center">
                     <li><a href="explore.html" class="nav-link">Shop</a></li>
                     <li><a href="rewards.html" class="nav-link">Rewards</a></li>
-                    <li><a href="#" class="nav-link">About</a></li>
                     <li><a href="#" class="nav-link">Support</a></li>
                     <li id="account-button" class="nav-link"><img src="assets/img/index/user-interface.png" alt="" style="height: 20px;"></li>
                 </ul>
@@ -54,10 +53,18 @@
     <!-- NAVIGATION BAR: END -->
 
     <!-- LOYALTY PROGRAM: START -->
-    <h1 class="text-center mt-5">Meet Poop - The Way We Reward You For Spending</h1>
+    <h1 class="text-center mt-5">Hu Else - Earn Your Way To The Top</h1>
+    <div style="display: flex; justify-content: center; align-items: center;">
+        <p>Top three walks away with cash prizes worth up to</p>
+        <p class="ps-2 pe-2 text-danger"><strong>$8,888</emphasis></strong></p>
+        <p>this CNY season!</p>
+    </div>
+    <p class="text-center">15 Jan 2022 - 15 Feb 2022</p>
+
+    <lottie-player class="mx-auto d-block" src="https://assets7.lottiefiles.com/packages/lf20_vvpxhboz.json"  background="transparent"  speed="1"  style="width: 150px; height: 150px;"  loop autoplay></lottie-player>
 
     <!-- HOW IT WORKS SECTION: START -->
-    <div class="container my-5">
+    <div class="container" style="margin-top: -20px;">
         <div class="col">
             <div class="row-sm ms-4 me-4">
                 <div class="container my-5">
@@ -66,11 +73,30 @@
                             <p class="rewards-steps-icon">1</p>
                         </div>
                         <div class="col-sm-8 ms-4 me-4 my-auto">
-                            <h5 class="text-left text-uppercase"><strong>Performance Optimised</strong></h5>
+                            <h5 class="text-left text-uppercase"><strong>Earn Points By Spending</strong></h5>
                             <p class="text-left">
-                                COMZONE PC selects and uses only the finest components.
-                                We fine tune systems to get the ideal performance in the most demanding scenarios, and you know what you are getting
-                                when you build a boutique system with us. ABC
+                                You receive 1 Ang Bao <img src="assets/img/rewards/ang-bao.png" width="35px" height="35px"> for every $5 you spend. 
+                                The more you spend, the more you earn.
+                            </p>
+                        </div>
+                        <div class="col-sm-2 ms-4 me-4">
+                            <p class="rewards-steps-icon">2</p>
+                        </div>
+                        <div class="col-sm-8 ms-4 me-4 my-auto">
+                            <h5 class="text-left text-uppercase"><strong>Trade Ang Baos For Rewards</strong></h5>
+                            <p class="text-left">
+                                You can use the Ang Baos <img src="assets/img/rewards/ang-bao.png" width="35px" height="35px"> you have to redeem rewards 
+                                such as discount vouchers, free shipping and more!
+                            </p>
+                        </div>
+                        <div class="col-sm-2 ms-4 me-4">
+                            <p class="rewards-steps-icon">3</p>
+                        </div>
+                        <div class="col-sm-8 ms-4 me-4 my-auto">
+                            <h5 class="text-left text-uppercase"><strong>Earn Your Way Up The Leaderboard</strong></h5>
+                            <p class="text-left">
+                                You will be ranked based on your Ang Bao <img src="assets/img/rewards/ang-bao.png" width="35px" height="35px"> count.
+                                The top 3 winners walk away with $8,888, $888 and $88 respectively.
                             </p>
                         </div>
                     </div>
@@ -79,8 +105,17 @@
         </div>
     </div>
     <!-- HOW IT WORKS SECTION: END -->
-
+    <div style="display: flex; justify-content: center; align-items: center;" class="mb-4">
+        <p>
+            Note:
+            <br>
+            You need to be a member to participate in this event. Sign up <a href="register.html">here</a>.
+            <br>
+            Already a member? <a href="register.html">Login</a>.</p>
+    </div>
     <!-- LOYALTY PROGRAM: END -->
+
+    <hr class="w-50 mx-auto d-block">
 
     <!-- LEADERBOARD: START-->
     <div class="container py-5">
@@ -96,7 +131,7 @@
                     <thead>
                     <th>Rank</th>
                     <th>Name</th>
-                    <th>Score</th>
+                    <th>Ang Baos</th>
                     </thead>
                     <tbody></tbody>
                 </table>
@@ -180,5 +215,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/script.js"></script>
     <script src="js/leaderboard.js"></script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </body>
 </html>
