--- a/index.html
+++ b/index.html
@@ -146,31 +146,57 @@
     </div>
     <!-- VIDEO PLAYER SECTION: END -->
 
-
-    <!-- ENDORSEMENT: START -->
-    <div class="container my-5">
-        <h2 class="text-center">We're Built For The Best</h2>
-        <div class="pro-img-block mx-auto d-block mt-3">
-            <img src="assets/img/index/pro-endorsement-shuqri-xiao.jpg" alt="">
+    <section class="team text-center py-5">
+        <div class="container">
+          <div class="header my-5">
+            <h2 class="text-center">We're Built For The Best</h2>
+            <p class="text-muted">Meet The Pros Who Use Our Products</p>
+          </div>
+          <div class="row">
+            <div class="col-md-6 col-lg-3">
+              <div class="img-block mb-5">
+                <img src="assets/img/index/pro-endorsement-shuqrixiao.jpg" class="img-fluid  img-thumbnail rounded-circle" alt="image1">
+                <div class="content mt-2">
+                  <h5 class="mt-3">Shuqri Xiao</h5>
+                  <p class="text-muted">Professional Apex Legends Player</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+              <div class="img-block mb-5">
+                <img src="assets/img/index/pro-endorsement-pokemane.jpg" class="img-fluid  img-thumbnail rounded-circle" alt="image1">
+                <div class="content mt-2">
+                  <h5 class="mt-3">Pokemane</h5>
+                  <p class="text-muted">Just Chat Streamer</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-3 ">
+                <div class="img-block mb-5">
+                  <img src="assets/img/index/pro-endorsement-wardell.jpg" class="img-fluid  img-thumbnail rounded-circle" alt="image1">
+                  <div class="content mt-2">
+                    <h5 class="mt-3">WARDELL</h5>
+                    <p class="text-muted">Professional Twitch Screamer</p>
+                  </div>
+                </div>
+              </div>
+            <div class="col-md-6 col-lg-3">
+              <div class="img-block mb-5">
+                <img src="assets/img/index/pro-endorsement-shannon.jpg" class="img-fluid  img-thumbnail rounded-circle" alt="image1">
+                <div class="content mt-2">
+                  <h5 class="mt-3">Shannon</h5>
+                  <p class="text-muted">Jett Cosplayer</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="pro-text-block mx-auto d-block bg-dark text-white">
-            <h5 class="pt-5 ps-5"><strong>Shuqri Xiao</strong></h5>
-            <p class="ps-5">Professional Apex Legends Player</p>
-        </div>
-        <div class="pro-img-block mx-auto d-block mt-3">
-            <img src="assets/img/index/pro-endorsement-wardell.jpg" alt="">
-        </div>
-        <div class="pro-text-block mx-auto d-block bg-dark text-white">
-            <h5 class="pt-5 ps-5"><strong>WARDELL</strong></h5>
-            <p class="ps-5">Professional Twitch Screamer</p>
-        </div>
-    </div>
-    <!-- ENDORSEMENT: END -->
+      </section>
 
     <!-- TESTIMONIAL: START -->
-    <div class="testimonial text-center bg-dark mt-4">
+    <div class="testimonial text-center bg-dark mt-3">
         <div class="container">
-            <h2 class="text-center text-white mt-5">Our Customers Love Us</h2>
+            <h2 class="text-center text-white mt-5 pt-3">Our Customers Love Us</h2>
             <img height="25px" style="filter: invert(100%);" class="mb-3" src="assets/img/index/5-star-rating.png">
             <div id="testimonial4" class="carousel slide testimonial4_indicators testimonial4_control_button thumb_scroll_x swipe_x" data-ride="carousel" data-pause="hover" data-interval="5000" data-duration="2000">
              
