Updated forge15s.html for a new laptop customisation page.

--- a/explore.html
+++ b/explore.html
@@ -229,7 +229,7 @@
                                 <h4 class="ps-2 text-primary"><strong>$1425</emphasis></strong></h4>
                             </div>
                             <a href="#" class="btn btn-primary">Add to Cart</a>
-                            <a href="#" class="btn btn-secondary">Customise</a>
+                            <a href="configuration/forge15s.html" class="btn btn-secondary">Customise</a>
                         </div>
                     </div>
                     <!-- ZEAL SYSTEM -->
