--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             <div class="input-group"> 
                 <input type="email" class="form-control" placeholder="Enter email to subscribe"> 
                 <span class="input-group-btn"> 
-                    <button class="mailing-btn" type="submit">Subscribe Now</button> 
+                    <button class="mailing-btn" type="submit" style="border-radius: 5%;">Subscribe Now</button> 
                 </span>
             </div>
         </div>
@@ -343,6 +343,118 @@
                     </p>
                     <img class="me-4" height="80px" width="80px" src="assets/img/index/best-badge.png" alt="">
                     <img height="80px" width="80px" src="assets/img/index/certified-badge.png" alt="">
+                    <div style="display: flex; justify-content: left; align-items: center; margin-top: 16px;" type="button" data-bs-toggle="modal" data-bs-target=".bd-example-modal-xl">
+                        <img src="assets/img/index/location.png" width="20px" height="20px" style="filter: invert(100%);">
+                        <p class="ps-1 text-white my-auto">Singapore</p>
+                    </div>
+                    <div class="modal fade bd-example-modal-xl" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-xl">
+                          <div class="modal-content px-5">
+                            <h2 class="text-center mt-5 mb-5 text-dark">Select Your Location</h2>
+                            <div class="mx-5">
+                                <h4 class="text-left text-dark" style="padding-left: 20px">Asia Pacific</h4>
+                                <div class="container">
+                                    <div class="row mb-3">
+                                        <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
+                                            <img src="assets/img/index/location.png" width="20px" height="20px">
+                                            <p class="ps-2 text-dark my-auto">Australia</p>
+                                        </div>
+                                        <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
+                                            <img src="assets/img/index/location.png" width="20px" height="20px">
+                                            <p class="ps-2 text-dark my-auto">China</p>
+                                        </div>
+                                        <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
+                                            <img src="assets/img/index/location.png" width="20px" height="20px">
+                                            <p class="ps-2 text-dark my-auto">Hong Kong</p>
+                                        </div>
+                                        <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
+                                            <img src="assets/img/index/location.png" width="20px" height="20px">
+                                            <p class="ps-2 text-dark my-auto">India</p>
+                                        </div>
+                                    </div>
+                                    <div class="row mb-3">
+                                        <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
+                                            <img src="assets/img/index/location.png" width="20px" height="20px">
+                                            <p class="ps-2 text-dark my-auto">Indonesia</p>
+                                        </div>
+                                        <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
+                                            <img src="assets/img/index/location.png" width="20px" height="20px">
+                                            <p class="ps-2 text-dark my-auto">Japan</p>
+                                        </div>
+                                        <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
+                                            <img src="assets/img/index/location.png" width="20px" height="20px">
+                                            <p class="ps-2 text-dark my-auto">Malaysia</p>
+                                        </div>
+                                        <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
+                                            <img src="assets/img/index/location.png" width="20px" height="20px">
+                                            <p class="ps-2 text-dark my-auto">New Zealand</p>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
+                                            <img src="assets/img/index/location.png" width="20px" height="20px">
+                                            <p class="ps-2 text-dark my-auto">Philippines</p>
+                                        </div>
+                                        <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
+                                            <img src="assets/img/index/location.png" width="20px" height="20px">
+                                            <p class="ps-2 text-dark my-auto">Korea</p>
+                                        </div>
+                                        <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
+                                            <img src="assets/img/index/location.png" width="20px" height="20px">
+                                            <p class="ps-2 text-dark my-auto">Singapore</p>
+                                        </div>
+                                        <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
+                                            <img src="assets/img/index/location.png" width="20px" height="20px">
+                                            <p class="ps-2 text-dark my-auto">Taiwan</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="m-5">
+                                <h4 class="text-left text-dark" style="padding-left: 20px">Europe</h4>
+                                <div class="container">
+                                    <div class="row mb-3">
+                                        <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
+                                            <img src="assets/img/index/location.png" width="20px" height="20px">
+                                            <p class="ps-2 text-dark my-auto">Austria</p>
+                                        </div>
+                                        <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
+                                            <img src="assets/img/index/location.png" width="20px" height="20px">
+                                            <p class="ps-2 text-dark my-auto">Belgium</p>
+                                        </div>
+                                        <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
+                                            <img src="assets/img/index/location.png" width="20px" height="20px">
+                                            <p class="ps-2 text-dark my-auto">Finland</p>
+                                        </div>
+                                        <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
+                                            <img src="assets/img/index/location.png" width="20px" height="20px">
+                                            <p class="ps-2 text-dark my-auto">France</p>
+                                        </div>
+                                    </div>
+                                    <div class="row mb-3">
+                                        <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
+                                            <img src="assets/img/index/location.png" width="20px" height="20px">
+                                            <p class="ps-2 text-dark my-auto">Ireland</p>
+                                        </div>
+                                        <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
+                                            <img src="assets/img/index/location.png" width="20px" height="20px">
+                                            <p class="ps-2 text-dark my-auto">Norway</p>
+                                        </div>
+                                        <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
+                                            <img src="assets/img/index/location.png" width="20px" height="20px">
+                                            <p class="ps-2 text-dark my-auto">Sweden</p>
+                                        </div>
+                                        <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
+                                            <img src="assets/img/index/location.png" width="20px" height="20px">
+                                            <p class="ps-2 text-dark my-auto">United Kingdown</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <button type="button" class="btn btn-secondary w-25 mt-0 m-5 mx-auto d-block" data-bs-dismiss="modal">Close</button>
+                          </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
                     <h5 class="mb-4 font-weight-bold">NAVIGATION</h5>
